--- a/images/styles/portfolio.css
+++ b/images/styles/portfolio.css
@@ -92,7 +92,9 @@ margin-bottom: 20px;
     text-align: center;
 }
 .section-title{
-    margin-bottom: 30px;
+    margin-bottom: 50px;
+    text-align: center;
+    font-size: 35px;
 
 }
 .section-description{
@@ -113,3 +115,78 @@ margin-bottom: 20px;
     font-size: 20px;
     color: #474747;
 }
+/* What I do styles  */
+.what-i-do{
+    margin-top: 130px;
+}
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+.skill-title{
+    font-weight: 700;
+    font-size: 20px;
+    color: #181818;
+    margin-top: 30px;
+    margin-bottom: 20px;
+    
+}
+.skill-description{
+    color: #757575;
+}
+.skills{
+    background: #FFFFFF;
+box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+border-radius: 5px;
+padding: 30px;
+}
+/* Resume style */
+.resume-content{
+    display: flex;
+    gap: 24px;
+}
+.resume-item{
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+.resume .title{
+    font-size: 25px;
+    font-weight: 700;
+    color: #474747;
+    margin-bottom: 10px;
+}
+.resume .sub-title{
+    font-weight: 600;
+    font-size: 20px;
+    color: #757575;
+    margin-bottom: 20px;
+}
+.resume .description{
+    color: #757575;
+}
+ .resume-btn{
+    margin-top: 50px;
+    text-align: center;
+    margin-bottom: 113px;
+ }
+ /* contact styles */
+    .contact .section-title{
+    text-align: left;
+    
+    }
+    .contact{
+        display: flex;
+        gap: 117px;
+        background: #FFF8F3;
+        padding: 130px 230px;
+    }
+    .contact input[type="text"],input[type="email"],textarea{
+        margin-bottom: 24px;
+        border: 0;
+        width: 100%;
+        padding-left: 30px;
+        padding-top: 18px;
+    }
+    .contact a{
+        text-decoration: none;
+    }
